--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drop Box</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="top row">
-       <section class="right row">
-        <div class="logo row">
-            <img src="img/logo-small.png" alt="">
-        </div>
-        <div class="list-1">
-            <ul class="row">
-                <li>Perchè Dropbox</li>
-                <li>Funzioni</li>
-                <li>Piani e Prezzi</li>
-            </ul>
-        </div>
-        
+        <section class="right row">
+            <div class="logo row">
+                <img src="img/logo-small.png" alt="">
+            </div>
+            <div class="list-1">
+                <ul class="row">
+                    <li>Perchè Dropbox</li>
+                    <li>Funzioni</li>
+                    <li>Piani e Prezzi</li>
+                </ul>
+            </div>
 
-       </section>
 
-       <section class="left row">
-        <div class="list-2">
-            <ul class="row">
-                <li>Supporto</li>
-                <li>Contatta L'ufficio Vendite</li>
-            </ul>
-            <div class="buttons row">
-                <div class="Login">
-                    Accedi 
-                </div>
-                <div class="Start">
-                    Inizia
+        </section>
+
+        <section class="left row">
+            <div class="list-2 row">
+                <ul class="row">
+                    <li>Supporto</li>
+                    <li>Contatta L'ufficio Vendite</li>
+                </ul>
+                <div class="buttons row">
+                    <div class="Login">
+                        Accedi
+                    </div>
+                    <div class="Start blue">
+                        Inizia
+                    </div>
                 </div>
             </div>
-        </div>
 
-       </section>
+        </section>
 
     </header>
     <main>
@@ -48,6 +50,7 @@
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
