prima struttura di main

--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
 
     </header>
     <main>
+        <section>
+            <div class="container column">
+                <div class="title">
+
+                </div>
+                <div class="specification">
+                    <div class="description">
+
+                    </div>
+                    <div class="img-Dp">
+                        
+                    </div>
+
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
