--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="top row">
-        <section class="right row">
+        <section class="left row">
             <div class="logo row">
                 <img src="img/logo-small.png" alt="">
             </div>
@@ -25,7 +25,7 @@
 
         </section>
 
-        <section class="left row">
+        <section class="right row">
             <div class="list-2 row">
                 <ul class="row">
                     <li>Supporto</li>
@@ -50,12 +50,12 @@
                 <div class="title">
 
                 </div>
-                <div class="specification">
+                <div class="specification row">
                     <div class="description">
 
                     </div>
                     <div class="img-Dp">
-                        
+
                     </div>
 
                 </div>
