prima parte del main fatta

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <section>
             <div class="container column">
-                <div class="title">
+                <div class="title row">
 
                 </div>
                 <div class="specification row">
@@ -59,6 +59,11 @@
                     </div>
 
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="container-big">
+                
             </div>
         </section>
 
