fine parte business

--- a/index.html
+++ b/index.html
@@ -62,8 +62,32 @@
             </div>
         </section>
         <section>
-            <div class="container-big">
-                
+            <div class="container-big column">
+                <!-- inizio business plan -->
+
+                <div class="business-title"></div>
+
+                <div class="business-cln row">
+                    <div class="cln"></div>
+                    <div class="cln"></div>
+                    <div class="cln"></div>
+                </div>
+
+                <div class="business-bottom"></div>
+
+                <!-- fine business plan -->
+
+                <!-- inizio partner block -->
+                <div class="partner">
+                    <div class="text-partner"></div>
+                    <div class="img-partner"></div>
+                </div>
+
+
+
+               
+
+
             </div>
         </section>
 
