prima section completata

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drop Box</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
+
+<!-- font -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
@@ -45,16 +53,25 @@
 
     </header>
     <main>
-        <section>
+        <section id="background" >
             <div class="container column">
                 <div class="title row">
+                    <h1>Tutto ciò che ti serve per il lavoro in un unico posto</h1>
 
                 </div>
                 <div class="specification row">
-                    <div class="description">
+                    <div class="description  column">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias vero animi, eaque minima facere quod numquam, molestiae quaerat cupiditate officia, ullam sed unde neque! Facere vitae expedita nisi sequi porro!</p>
+
+                        <a href="#" class="button">Inizia la tua prova gratuita</a>
+
+                        <p>Annulla in qualsiasi momento</p>
+
+                        <i class="fa-solid fa-arrow-down"></i>
 
                     </div>
                     <div class="img-Dp">
+                        <img src="img/jumbo.png" alt="sito ">
 
                     </div>
 
@@ -147,7 +164,7 @@
 
     </main>
     <footer>
-        <div class="container-footer">
+        <div class="container-footer container-big">
             <div class="lists row">
                 <div class="list"></div>
                 <div class="list"></div>
