inizio secondo blocco

--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
             <div class="container-big column">
                 <!-- inizio business plan -->
 
-                <div class="business-title"></div>
+                <div class="business-title">
+                    <h2>Trova il piano Business che fa per te</h2>
+                    
+
+                </div>
 
                 <div class="business-cln row">
                     <div class="cln"></div>
