fine business plan

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                     </div>
                     <div class="cln">
-                        <h5><i class="fa-solid fa-user"></i> Singolo</h5>
+                        <h5><i class="fa-solid fa-users"></i></i> Team</h5>
                         <!-- fine titolo della colonna -->
 
                         <!-- corpo della colonna -->
@@ -169,13 +169,16 @@
                             <ul>
                                 <li class="space"><i class="fa-solid fa-check"></i> Invia file fino a 100 Gb con Drop box</li>
                                 <li class="space"><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li class="space"><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li class="space"><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li class="space"><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
                             </ul>
 
                         </div>
 
                     </div>
                     <div class="cln">
-                        <h5><i class="fa-solid fa-user"></i> Singolo</h5>
+                        <h5><i class="fa-solid fa-building"></i></i> Azienda</h5>
                         <!-- fine titolo della colonna -->
 
                         <!-- corpo della colonna -->
@@ -212,7 +215,18 @@
 
                 <!-- fine corpo della colonna -->
 
-                <div class="business-bottom"></div>
+                <div class="business-bottom">
+                    <h5><i class="fa-solid fa-building"></i></i> Team</h5>
+                    <div class="cln-1 relative">
+                        <div class="pack space">Enterprice</div>
+                        <div class="money distance">Contatta l''ufficio per i prezzi</div>
+                        <p>Soluzione personalizzate e supporto personalizzato per aiutare i professionisti it <br> nella gestione di qualsiasi scala.</p>
+
+                        <div class="button">Contatta L'Ufficio vendite</div>
+
+
+                    </div>
+                </div>
 
                 <!-- fine business plan -->
 
