Correzione dettagli e inserimento bonus

--- a/index.html
+++ b/index.html
@@ -418,13 +418,13 @@
 
 
                     <div class="border-bot">Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced
+                        Advanced?
                     </div>
                     <div class="border-bot">Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced
+                        Advanced?
                     </div>
                     <div class="border-bot">Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced
+                        Advanced?
                     </div>
                 </div>
 
@@ -493,6 +493,9 @@
             </div>
 
             <div class="language">
+                <div class="ita">
+                    <i class="fa-solid fa-earth-americas"></i> italiano <i class="fa-solid fa-caret-down"></i>
+                </div>
 
                 
             </div>
