--- a/index.html
+++ b/index.html
@@ -417,14 +417,36 @@
                     <h4 class="border-bot">Domande frequenti</h4>
 
 
-                    <div class="border-bot">Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced?
+                    <div class="border-bot row">
+                        <div class="quest-buss">
+                            Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                            Advanced?
+                        </div>
+                        <div class="queest-icon">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+
+                        
                     </div>
-                    <div class="border-bot">Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced?
+                    <div class="border-bot row">
+                        <div class="quest-buss">
+                            Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                            Advanced?
+                        </div>
+                        <div class="queest-icon">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+
                     </div>
-                    <div class="border-bot">Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced?
+                    <div class="border-bot row">
+                        <div class="quest-buss">
+                            Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                            Advanced?
+                        </div>
+                        <div class="queest-icon">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+
                     </div>
                 </div>
 
