--- a/index.html
+++ b/index.html
@@ -417,14 +417,21 @@
                     <h4 class="border-bot">Domande frequenti</h4>
 
 
-                    <div class="border-bot row">
-                        <div class="quest-buss">
-                            Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                            Advanced?
+                    <div class="border-bot ">
+                        <div class="QeA row">
+                            <div class="quest-buss">
+                                Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                                Advanced?
+                            </div>
+                            <div class="queest-icon">
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+
                         </div>
-                        <div class="queest-icon">
-                            <i class="fa-solid fa-chevron-down"></i>
+                        <div class="answer">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sint corporis soluta debitis illum. Reprehenderit rem sapiente, minima dolorem quasi inventore earum molestiae distinctio aut exercitationem suscipit illo enim saepe?
                         </div>
+
 
                         
                     </div>
