--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+    <!-- Buone feste ragazzi -->
+
     <header class="top row">
         <section class="left row">
             <div class="logo row">
@@ -435,24 +437,37 @@
 
                         
                     </div>
-                    <div class="border-bot row">
-                        <div class="quest-buss">
-                            Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                            Advanced?
+                    <div class="border-bot ">
+                        <div class="QeA row">
+                            <div class="quest-buss">
+                                Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                                Advanced?
+                            </div>
+                            <div class="queest-icon">
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+
                         </div>
-                        <div class="queest-icon">
-                            <i class="fa-solid fa-chevron-down"></i>
+                        <div class="answer">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sint corporis soluta debitis illum. Reprehenderit rem sapiente, minima dolorem quasi inventore earum molestiae distinctio aut exercitationem suscipit illo enim saepe?
                         </div>
 
                     </div>
-                    <div class="border-bot row">
-                        <div class="quest-buss">
-                            Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                            Advanced?
+                    <div class="border-bot ">
+                        <div class="QeA row">
+                            <div class="quest-buss">
+                                Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                                Advanced?
+                            </div>
+                            <div class="queest-icon">
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+
                         </div>
-                        <div class="queest-icon">
-                            <i class="fa-solid fa-chevron-down"></i>
+                        <div class="answer">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sint corporis soluta debitis illum. Reprehenderit rem sapiente, minima dolorem quasi inventore earum molestiae distinctio aut exercitationem suscipit illo enim saepe?
                         </div>
+
 
                     </div>
                 </div>
